--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -6,10 +6,9 @@ CC=@CC@
 datarootdir=@datarootdir@
 datadir=@datadir@
 localinteractions=../interactions
+localbin=../bin
 localsrc=../src
 SPQRFLAGS=-DFROZEN
-
-
 binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_eSA 
 
 %.o : %.c
@@ -27,7 +26,6 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_
 %_ea.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DERMSDR -o $@ -c $<
 
-
 all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o  mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o 
 	$(CC) $(CFLAGS)	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_MC -lm
 	$(CC) $(CFLAGS)	mpi_mc_we.o mc_checkpoints.o  mc_end_we.o  mc_energies_we.o  mc_initialization_we.o mc_integrate_we.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eMC -lm
@@ -40,15 +38,16 @@ all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  m
 #	$(CC) $(CFLAGS)	ptemp.o pt_impl.o  mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_PT -lm
 
 install:
-	rm -rf ../bin 
-	mkdir -p ../bin
-	mv SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG SPQR_SA SPQR_wSA SPQR_eSA ../bin
-	rm -rf ../interactions
-	mkdir -p ../interactions
+	rm -rf $(localbin)
+	mkdir -p $(localbin)
+	mv SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG SPQR_SA SPQR_wSA SPQR_eSA $(localbin)
+	rm -rf $(localinteractions)
+	mkdir -p $(localinteractions)
 	./WRITETABLES
+	mv $(localinteractions)/intrac.btb $(localinteractions)/no_bph_intrac.btb
 clean:
 	rm -f *.o $(binaries)
 	rm -rf bin
 uninstall:
-	rm -rf ../bin
-	rm -f ../interactions/intrac.btb
+	rm -rf $(localbin)
+	rm -r $(localinteractions)
