--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -9,7 +9,9 @@ localinteractions=../interactions
 localbin=../bin
 localsrc=../src
 SPQRFLAGS=-DFROZEN
-binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_eSA 
+binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_eSA 
+
+
 
 %.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS)  -o $@ -c $<
@@ -17,6 +19,8 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DERMSDR  -o $@ -c $<
 %_cr.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DNOCTCS -DERMSDR -DLNKRMV  -o $@ -c $<
+%_mi.o : %.c
+	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DNOCTCS -DERMSDR  -o $@ -c $<
 %_xy.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DXYZDEBUG  -o $@ -c $<
 %_sa.o : %.c
@@ -26,10 +30,11 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_wSA SPQR_
 %_ea.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DERMSDR -o $@ -c $<
 
-all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o  mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o 
+all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o mc_ermsd_mi.o mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o mpi_mc_mi.o mc_energies_mi.o mc_initialization_mi.o mc_integrate_mi.o mc_end_mi.o
 	$(CC) $(CFLAGS)	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_MC -lm
 	$(CC) $(CFLAGS)	mpi_mc_we.o mc_checkpoints.o  mc_end_we.o  mc_energies_we.o  mc_initialization_we.o mc_integrate_we.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eMC -lm
 	$(CC) $(CFLAGS)	mpi_mc_cr.o mc_checkpoints.o  mc_end_cr.o  mc_energies_cr.o  mc_initialization_cr.o mc_integrate_cr.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_cr.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_cMC -lm
+	$(CC) $(CFLAGS)	mpi_mc_mi.o mc_checkpoints.o  mc_end_mi.o  mc_energies_mi.o  mc_initialization_mi.o mc_integrate_mi.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_mi.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_mMC -lm
 	$(CC) $(CFLAGS)	get_energ.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_ENERG -lm
 	$(CC) $(CFLAGS)	write_tabs.o mc_checkpoints.o  mc_end.o  mc_energies.o mc_initialization.o  mc_integrate.o  mc_verlet_lists.o  mc_global.o  mc_base_pairing.o  mc_utils.o  -DSPQR_DATA=$(datadir)/spqr -o WRITETABLES -lm
 	$(CC) $(CFLAGS)	sim_anneal.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_SA -lm
@@ -40,7 +45,7 @@ all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  m
 install:
 	rm -rf $(localbin)
 	mkdir -p $(localbin)
-	mv SPQR_MC SPQR_eMC SPQR_cMC SPQR_ENERG SPQR_SA SPQR_wSA SPQR_eSA $(localbin)
+	mv SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG SPQR_SA SPQR_wSA SPQR_eSA $(localbin)
 	rm -rf $(localinteractions)
 	mkdir -p $(localinteractions)
 	./WRITETABLES
