--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -19,6 +19,8 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DERMSDR  -o $@ -c $<
 %_cr.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DNOCTCS -DERMSDR -DLNKRMV  -o $@ -c $<
+%_be.o : %.c
+	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DNOCTCS -DERMSDR -DEBUILD  -o $@ -c $<
 %_mi.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DNOCTCS -DERMSDR  -o $@ -c $<
 %_xy.o : %.c
@@ -30,11 +32,13 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_
 %_ea.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DERMSDR -o $@ -c $<
 
-all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o mc_ermsd_mi.o mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o mpi_mc_mi.o mc_energies_mi.o mc_initialization_mi.o mc_integrate_mi.o mc_end_mi.o
+all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o mc_ermsd_mi.o mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o mpi_mc_mi.o mc_energies_mi.o mc_initialization_mi.o mc_integrate_mi.o mc_end_mi.o mc_integrate_be.o
+
 	$(CC) $(CFLAGS)	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_MC -lm
 	$(CC) $(CFLAGS)	mpi_mc_we.o mc_checkpoints.o  mc_end_we.o  mc_energies_we.o  mc_initialization_we.o mc_integrate_we.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eMC -lm
 	$(CC) $(CFLAGS)	mpi_mc_cr.o mc_checkpoints.o  mc_end_cr.o  mc_energies_cr.o  mc_initialization_cr.o mc_integrate_cr.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_cr.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_cMC -lm
 	$(CC) $(CFLAGS)	mpi_mc_mi.o mc_checkpoints.o  mc_end_mi.o  mc_energies_mi.o  mc_initialization_mi.o mc_integrate_mi.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_mi.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_mMC -lm
+	$(CC) $(CFLAGS)	mpi_mc_mi.o mc_checkpoints.o  mc_end_mi.o  mc_energies_mi.o  mc_initialization_mi.o mc_integrate_be.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_mi.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_bMC -lm
 	$(CC) $(CFLAGS)	get_energ.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_ENERG -lm
 	$(CC) $(CFLAGS)	write_tabs.o mc_checkpoints.o  mc_end.o  mc_energies.o mc_initialization.o  mc_integrate.o  mc_verlet_lists.o  mc_global.o  mc_base_pairing.o  mc_utils.o  -DSPQR_DATA=$(datadir)/spqr -o WRITETABLES -lm
 	$(CC) $(CFLAGS)	sim_anneal.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_SA -lm
