Super bug fixed

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -28,7 +28,7 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_
 %_sa.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -o $@ -c $<
 %_wa.o : %.c
-	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DWARMUP -DLNKRMV -DERMSDR -o $@ -c $<
+	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DWARMUP -DLNKRMV  -o $@ -c $<
 %_ea.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DERMSDR -o $@ -c $<
 
