--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -58,7 +58,7 @@ install:
 	./WRITETABLES
 	mv MCEDIT MC2PDB $(localtools)
 	echo $(abspath)
-	sed -i "s:SPQRPATH:$(abspath):g" $(abspath)/example/params.spqr
+	sed -i "s:SPQRPATH:$(abspath):g" $(abspath)/tutorials/single_run/params.spqr
 	sed -i "s:SPQRPATH:$(abspath):g" $(abspath)/tools/SPQR_REFINE
 clean:
 	rm -f *.o $(binaries)
