--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -32,9 +32,11 @@ binaries=SPQR_MC SPQR_eMC SPQR_cMC SPQR_mMC SPQR_ENERG WRITETABLES SPQR_SA SPQR_
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DWARMUP -DLNKRMV  -o $@ -c $<
 %_ea.o : %.c
 	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DERMSDR -o $@ -c $<
+%_ca.o : %.c
+	$(CC) $(CFLAGS) $(SPQRFLAGS) -DFROZEN -DTANN -DWARMUP -DNOCTCS -DERMSDR -DLNKRMV -o $@ -c $<
 %_to.o : %.c
 	$(CC) $(CFLAGS)  -o $@ -c $<
-all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o mc_ermsd_mi.o mc_ermsd_wa.o mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o sim_anneal_ea.o mpi_mc_mi.o mc_energies_mi.o mc_initialization_mi.o mc_integrate_mi.o mc_end_mi.o mc_integrate_be.o mcedit.o mc2pdb.o sim_anneal_mi.o mc_checkpoints_mi.o
+all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  mc_integrate.o  mc_verlet_lists.o mc_global.o mc_base_pairing.o mc_utils.o mc_ermsd.o mc_ermsd_cr.o mc_ermsd_mi.o mc_ermsd_wa.o mpi_mc_we.o mc_energies_we.o mc_initialization_we.o mc_integrate_we.o mc_end_we.o mpi_mc_cr.o mc_energies_cr.o mc_initialization_cr.o mc_integrate_cr.o mc_end_cr.o mc_energies_xy.o get_energ.o write_tabs.o sim_anneal.o sa_impl.o mc_energies_wa.o mc_initialization_wa.o mc_integrate_wa.o mc_checkpoints_sa.o mc_energies_ea.o mc_initialization_ea.o mc_integrate_ea.o mc_ermsd_ea.o sim_anneal_ea.o mpi_mc_mi.o mc_energies_mi.o mc_initialization_mi.o mc_integrate_mi.o mc_end_mi.o mc_integrate_be.o mcedit.o mc2pdb.o sim_anneal_mi.o mc_checkpoints_mi.o sim_anneal_ca.o  mc_checkpoints_ca.o mc_end_ca.o  mc_energies_ca.o  mc_initialization_ca.o mc_integrate_ca.o  mc_ermsd_ca.o
 
 	$(CC) $(CFLAGS)	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_MC -lm
 	$(CC) $(CFLAGS)	mpi_mc_we.o mc_checkpoints.o  mc_end_we.o  mc_energies_we.o  mc_initialization_we.o mc_integrate_we.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eMC -lm
@@ -45,8 +47,8 @@ all: 	mpi_mc.o mc_checkpoints.o  mc_end.o  mc_energies.o  mc_initialization.o  m
 	$(CC) $(CFLAGS)	write_tabs.o mc_checkpoints.o  mc_end.o  mc_energies.o mc_initialization.o  mc_integrate.o  mc_verlet_lists.o  mc_global.o  mc_base_pairing.o  mc_utils.o  -DSPQR_DATA=$(datadir)/spqr -o WRITETABLES -lm
 	$(CC) $(CFLAGS)	sim_anneal.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies.o  mc_initialization.o mc_integrate.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_SA -lm
 	$(CC) $(CFLAGS)	sim_anneal.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies_wa.o  mc_initialization_wa.o mc_integrate_wa.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_wa.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_wSA -lm
-	$(CC) $(CFLAGS)	sim_anneal_ea.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies_ea.o  mc_initialization_ea.o mc_integrate_ea.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eSA -lm
-	$(CC) $(CFLAGS)	sim_anneal_mi.o sa_impl.o mc_checkpoints_mi.o mc_end.o  mc_energies_mi.o  mc_initialization_mi.o mc_integrate_mi.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_cSA -lm
+	$(CC) $(CFLAGS)	sim_anneal_ea.o sa_impl.o mc_checkpoints_sa.o mc_end.o  mc_energies_ea.o  mc_initialization_ea.o mc_integrate_ea.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_ea.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_eSA -lm
+	$(CC) $(CFLAGS)	sim_anneal_ca.o sa_impl.o mc_checkpoints_ca.o mc_end.o  mc_energies_ca.o  mc_initialization_ca.o mc_integrate_ca.o  mc_verlet_lists.o  mc_global.o mc_base_pairing.o  mc_utils.o mc_ermsd_ca.o -DSPQR_DATA=$(datadir)/spqr -o SPQR_cSA -lm
 	$(CC) mcedit.o -o MCEDIT
 	$(CC) $(CFLAGS) mc2pdb.o -o MC2PDB
 
