--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -63,7 +63,7 @@ install:
 	mv MCEDIT MC2PDB $(localtools)
 	echo $(abspath)
 	cat  $(abspath)/tutorials/single_run/params.spqr | sed "s:SPQRPATH:$(abspath):g" > temp; mv temp $(abspath)/tutorials/single_run/params.spqr
-	cat  $(abspath)/tools/disentangle_from_RNAspider.py | sed "s:SPQRPATH:$(abspath):g" > temp; mv temp $(abspath)/tools/disentangle.py
+	cat  $(abspath)/tools/disentangle_from_RNAspider.py | sed "s:SPQRPATH:$(abspath):g" > temp; mv temp $(abspath)/tools/disentangle_from_RNAspider.py
 	cat $(abspath)/tools/SPQR_REFINE | sed "s:SPQRPATH:$(abspath):g" > temp ; mv temp $(abspath)/tools/SPQR_REFINE
 	chmod +x $(abspath)/tools/SPQR_REFINE
 clean:
